<resources>
    <string name="app_name">Basic</string>
    <string name="voltageBatteryHeader">Battery Voltage:</string>
    <string name="voltageChargerHeader">Charger Voltage:</string>
    <string name="tiltAngleHeader">Tilt Angle (deg):</string>
    <string name="angularVelocityHeader">Angular Velocity (deg/s):</string>
    <string name="leftWheelHeader">Left Wheel Count:</string>
    <string name="rightWheelHeader">Right Wheel Count:</string>
    <string name="soundDataHeader">Sound Data:</string>
    <string name="frameRateHeader">Frame Rate:</string>
</resources>
