<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/voltageChargerHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voltageChargerHeader" />
    <TextView
        android:id="@+id/voltageChargerLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/voltageBatteryHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voltageBatteryHeader" />
    <TextView
        android:id="@+id/voltageBattLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tiltAngleHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tiltAngleHeader" />
    <TextView
        android:id="@+id/tiltAngle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/angularVelcoityHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/angularVelocityHeader" />
    <TextView
        android:id="@+id/angularVelcoity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/leftWheelHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leftWheelHeader" />
    <TextView
        android:id="@+id/leftWheelCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/rightWheelHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rightWheelHeader" />
    <TextView
        android:id="@+id/rightWheelCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/soundDataHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soundDataHeader" />
    <TextView
        android:id="@+id/soundData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.camera.view.PreviewView
        android:id="@+id/camera_x_preview"
        android:layout_width="100dp"
        android:layout_height="100dp" />
    <TextView
        android:id="@+id/frameRateHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frameRateHeader" />
    <TextView
        android:id="@+id/frameRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>
</TableLayout>